Revision history for JSON-Schema-Draft201909

{{$NEXT}}

0.026     2021-04-08 20:13:27Z
          - fix scoping of annotations from uncle keywords (siblings of the
            schema's parent) that were improperly visible to unevaluatedItems,
            unevaluatedProperties
          - 'result' attribute in JSON::Schema::Draft201909::Result has been
            renamed to 'valid', to better match what it represents (a boolean)

0.025     2021-03-30 05:36:14Z
          - minor changes to error strings to distinguish between issues that
            can be determined from static inspection of schema(s), and those
            that only arise during runtime evaluation (such as URIs that
            map to missing schema documents, or inconsistent configuration
            values).
          - more validity checks at traversal time of $ref, $schema,
            $vocabulary values
          - update ipv4 format validation to reject leading zeroes in octets,
            helping avoid a newly-discovered vulnerability in netmasks

0.024     2021-03-23 21:53:42Z
          - the default value for "validate_formats" is once again false (it
            became true in v0.020), to properly conform to the specification

0.023     2021-02-21 18:36:32Z
          - fix "try/catch is experimental" warnings in perl 5.33.7

0.022     2021-02-07 17:33:14Z
          - fix erroneous use of postfix dereference (closes #42).

0.021     2021-02-06 18:50:42Z
          - [Pp]roperties$ keywords now always produce annotations when
            evaluating successfully, even if there were no matching properties
          - added the "strict_basic" output format, for strict (but incorrect)
            adherence to the draft 2019-09 specification

0.020     2021-01-02 17:12:09Z
          - the default value for "validate_formats" is now true, to reflect
            the most typical usecase.
          - gracefully handle the erroneous schema { "type": null }